# audio-share

./: README.md  VERSION
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-server-core-linux.yml  build_app.yml  build_server.yml  compile_server.yml  release.yml  test.yml  update_sourceforge.yml
android-app/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android-app/app/: build.gradle.kts  proguard-rules.pro
android-app/app/src/main/: AndroidManifest.xml
android-app/app/src/main/res/: resources.properties
android-app/app/src/main/res/drawable/: baseline_autorenew.xml  baseline_bug_report.xml  baseline_content_copy.xml  baseline_new_releases.xml  baseline_notifications.xml  baseline_timer.xml  baseline_update.xml  baseline_volume_up.xml  github_mark.xml  play_circle_white.xml
android-app/app/src/main/res/drawable-v24/: github_mark.xml
android-app/app/src/main/res/layout/: activity_main.xml  fragment_home.xml
android-app/app/src/main/res/menu/: bottom_navigation_menu.xml
android-app/app/src/main/res/navigation/: nav_graph.xml
android-app/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml  values.xml
android-app/app/src/main/res/values-zh-rCN/: strings.xml
android-app/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  root_preferences.xml
android-app/gradle/: libs.versions.toml
audio-share-app/: .gitignore  build.gradle  gradle.properties  settings.gradle
audio-share-app/app/: build.gradle  build.gradle.kts  proguard-rules.pro
audio-share-app/app/src/main/: AndroidManifest.xml
audio-share-app/app/src/main/res/drawable/: baseline_1x_mobiledata.xml  baseline_battery_saver.xml  baseline_color_lens.xml  baseline_wallpaper.xml  github_mark.xml  github_mark_white.xml  ic_launcher_foreground.xml
audio-share-app/app/src/main/res/layout/: activity_main.xml  fragment_home.xml  image_frame.xml
audio-share-app/app/src/main/res/menu/: bottom_navigation_menu.xml
audio-share-app/app/src/main/res/navigation/: nav_graph.xml
audio-share-app/app/src/main/res/values-night/: themes.xml
audio-share-app/gradle/wrapper/: gradle-wrapper.properties
audio-share-server/: .gitignore  AudioShareServer.cpp  AudioShareServer.h  AudioShareServer.rc  AudioShareServerDlg.cpp  AudioShareServerDlg.h  audio-share-server.vcxproj  audio-share-server.vcxproj.filters  audio_manager.cpp  audio_manager.hpp  client.pb.cc  client.pb.h  common.cpp  common.hpp  framework.h  network_manager.cpp  network_manager.hpp  pch.cpp  pch.h  resource.h  settings.props  targetver.h
audio-share-server/res/: AudioShareServer.rc2  make_ico.bat
client-android/: build.gradle.kts
client-android/app/: proguard-rules.pro
docs/: protocol.md
go-client/: go.mod  go.sum  main.go
go-client/pb/: client.pb.go
metadata/en-US/: full_description.txt  short_description.txt  title.txt
metadata/en-US/changelogs/: 10.txt  1000.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  2.txt  2000.txt  2001.txt  2002.txt  3.txt  3000.txt  3001.txt  3002.txt  3003.txt  3004.txt  4.txt  5.txt  9.txt
protos/: client.proto
script/: apply_version.sh  get_version.sh
scripts/: apply_version.sh  get_version.sh  setup_sourceforge_release.sh
server-core/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  common.hpp  pack.sh
server-core/src/: audio_manager.cpp  audio_manager.hpp  common.cpp  config.h.in  formatter.hpp  main.cpp  network_manager.cpp  network_manager.hpp  pre_asio.hpp
server-core/src/linux/: audio_manager_impl.cpp  audio_manager_impl.hpp
server-core/src/win32/: audio_manager_impl.cpp  audio_manager_impl.hpp
server-mfc/: AudioShareServer.cpp  AudioShareServer.h  AudioShareServer.rc  AudioShareServerDlg.cpp  AudioShareServerDlg.h  audio-share-server.sln  audio-share-server.vcxproj  audio-share-server.vcxproj.filters  framework.h  pch.cpp  pch.h  resource.h
server-mfc/audio-share-server/: AppMsg.h  AudioShareServer.cpp  AudioShareServer.h  AudioShareServer.rc  CAboutDialog.cpp  CAboutDialog.h  CAppSettingsTabPanel.cpp  CAppSettingsTabPanel.h  CMainDialog.cpp  CMainDialog.h  CServerTabPanel.cpp  CServerTabPanel.h  CTabPanel.cpp  CTabPanel.h  audio-share-server.vcxproj  audio-share-server.vcxproj.filters  framework.h  pch.cpp  pch.h  resource.h  settings.props  targetver.h  util.cpp  util.hpp
server-mfc/audio-share-server/i18n/: .gitignore  generate_rc.py  strings.csv
server-mfc/audio-share-server/res/: make_bmp.bat  make_ico.bat
server-mfc/res/: AudioShareServer.rc2  make_ico.bat
server-mfc/unit-test/: unit-test.cpp  unit-test.vcxproj  unit-test.vcxproj.filters
(+70 files in other folders)
